Working tests under java 8
Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>